# FakePinterest-Web-App

./: Dockerfile  README.md  pyproject.toml
fakepinterest/: __init__.py  forms.py  models.py  routes.py
fakepinterest/templates/: criar_conta.html  feed.html  homepage.html  navbar.html  perfil.html
instance/: comunidade.db
