[tool.poetry]
name = "fakepinterest"
version = "0.1.0"
description = "Front-End App Study Case"
authors = ["Cadorini95 <mcadorini@peq.coppe.ufrj.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
pandas = "^2.2.3"
sqlalchemy = "^2.0.36"
pyodbc = "^5.2.0"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
flask-bcrypt = "^1.0.1"
flask-wtf = "^1.2.2"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
